Fix line breaking of nav links on narrow screen

--- a/app/assets/stylesheets/_navigation.scss
+++ b/app/assets/stylesheets/_navigation.scss
@@ -12,16 +12,29 @@ nav {
 
   & > a,
   .title {
-    margin: 1rem auto;
-    line-height: 2rem;
+    line-height: 1rem;
+    margin: 0.5rem auto;
     display: inline-block;
+
+    @media (min-width: 600px) {
+      line-height: 2rem;
+      margin: 1rem auto;
+    }
+  }
+
+  & > a {
+    display: block;
+
+    @media (min-width: 600px) {
+      display: inline-block;
+    }
   }
 
   .title {
     float: left;
     font-size: 2.5rem;
     font-family: 'Cookie', cursive;
-    
+
     a {
       padding-right: 0.5rem;
       padding-left: 0;
